--- a/styles.css
+++ b/styles.css
@@ -111,3 +111,18 @@ a {
   color: white;
   font-weight: bold;
 }
+.repo-item {
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.container > div {
+  flex: 50%; /* or - flex: 0 50% - or - flex-basis: 50% - */
+  /*demo*/
+  box-shadow: 0 0 0 1px black;
+  margin-bottom: 10px;
+}
