--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,9 @@ button:hover {
   background-color: #22863a;
 }
 
+#fetch-repo {
+  background-color: black;
+}
 main {
   max-width: 80%;
   margin: 20px auto;
