--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ a {
   font-style: italic;
 }
 
-#loader {
+.loader {
   border: 8px solid #f3f3f3;
   border-top: 8px solid #3498db;
   border-radius: 50%;
